2006-04-24  Nate Nielsen  <nielsen@memberwebs.com>

    * bonobo/seahorse-pgp-file-listener.c:
    * libcryptui/cryptui-key-chooser.c:
    * libcryptui/cryptui-keyset.c:
    * libcryptui/cryptui-keyset.h:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-op.c:
    * libseahorse/seahorse-op.h:
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-pgp-operation.c:
    * libseahorse/seahorse-pgp-operation.h:
    * libseahorse/seahorse-progress.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-vfs-data.c:
    * libseahorse/seahorse-vfs-data.h:
    * plugins/nautilus/Makefile.am:
    * plugins/nautilus/seahorse-tool-files.c (added):
    * plugins/nautilus/seahorse-tool-progress.c (added):
    * plugins/nautilus/seahorse-tool.c (added):
    * plugins/nautilus/seahorse-tool.h (added):
    * plugins/nautilus-ext/seahorse-nautilus.c:
    * src/Makefile.am:
    * src/main.c:
    * src/seahorse-pgp-encrypted.desktop.in:
    * src/seahorse-pgp-keys.desktop.in:
    * src/seahorse-pgp-signature.desktop.in:
    * src/seahorse-process-multiple.c (removed):
    * src/seahorse-windows.h: Build new 'seahorse-tool' for encryption 
    from nautilus/command line. Also fixes #159083
    
2006-04-24  Nate Nielsen  <nielsen@memberwebs.com>
    
    * src/seahorse-key-dialogs.h:
    * src/seahorse-key-properties.c:
    * src/seahorse-pgp-private-key-properties.glade:
    * src/seahorse-photos.c: Drag and drop support for add 
    photo id. Patch from Jim Pharis. Bug #336021
    
2006-04-22  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/org.gnome.seahorse.service.in: Add no-daemon flag
    to dbus service activation.
    
2006-04-21  Adam Schreiber  <sadam@clemson.edu>

    * daemon/seahorse-service-crypto.c:
    * libseahorse/seahorse-import.c:
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-notification.c:
    * libseahorse/seahorse-signatures.c:
    * plugins/applet/seahorse-applet.c: