@@ -240,7 +240,7 @@
 	      <child>
 		<widget class="GtkLabel" id="label15">
 		  <property name="visible">True</property>
-		  <property name="label" translatable="yes">&lt;b&gt;Remember Passwords&lt;/b&gt;</property>
+		  <property name="label" translatable="yes">&lt;b&gt;Remember Passphrases&lt;/b&gt;</property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">True</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -284,7 +284,7 @@
 			<widget class="GtkRadioButton" id="no-cache">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Never remember passwords</property>
+			  <property name="label" translatable="yes">_Never remember passphrases</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
@@ -309,7 +309,7 @@
 			    <widget class="GtkRadioButton" id="session-cache">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
-			      <property name="label" translatable="yes">_Remember passwords for</property>
+			      <property name="label" translatable="yes">_Remember passphrases for</property>
 			      <property name="use_underline">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
@@ -380,7 +380,7 @@
 			<widget class="GtkRadioButton" id="keyring-cache">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Always remember passwords whenever logged in</property>
+			  <property name="label" translatable="yes">_Always remember passphrases whenever logged in</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
@@ -770,7 +770,7 @@ it to the Session manager. </property>
 
 	  <child>
 	    <widget class="GtkLabel" id="label2">
-	      <property name="label" translatable="yes">Password Cache</property>
+	      <property name="label" translatable="yes">Passphrase Cache</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
