@@ -1,5 +1,12 @@
 2006-04-24  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * agent/seahorse-agent-cache.c:
+    * libseahorse/seahorse-prefs-cache.c:
+    * libseahorse/seahorse-prefs.glade: Some polish for new 
+    agent/gnome-keyring integration. 
+    
+2006-04-24  Nate Nielsen  <nielsen@memberwebs.com>
+
     * bonobo/seahorse-pgp-file-listener.c:
     * libcryptui/cryptui-key-chooser.c:
     * libcryptui/cryptui-keyset.c:
